--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -3,5 +3,7 @@
 What is the primary difference between an HTTP GET request and an HTTP Post request?
 
 # Answer
+ HTTP GET request tries to retrieve data from server to client and HTTP Post request tries to process the data that the client submits.
+
 
 # Teacher Feedback
