--- a/short-answers/q7.md
+++ b/short-answers/q7.md
@@ -13,9 +13,9 @@ Instead of:
 ```
 
 # Answer
-1.
+1. Modules have their own scope, helps prevent naming collisions and unintended interactions between different JavaScript files. Each module maintains its own private state unless explicitly exported.
 
-2.
+2. Modules can import functions, classes, or variables from other modules, making it easier to manage dependencies between different parts of your application. So, global variables and functions cannot be easily be overwritten or causes conflicts with other scripts on the same page.
 
 
 # Teacher Feedback
