--- a/short-answers/q8.md
+++ b/short-answers/q8.md
@@ -5,6 +5,12 @@ When we say "use semantic elements," what does that mean?
 Please be sure to give an example of a semantic and non-semantic element in your explanation.
 
 # Answer
+Semantic elements are HTML tags that are more specifically named that refers more closer for their purposes. In another words, semantic elements are designed to provide context and describe the structure of the web page.
 
+Example:
+```html
+Non-Semantic: <div>, <span>, <p>
 
+Semantic: <header>, <nav>, <section>, <footer>
+  ```
 # Teacher Feedback
