--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -3,10 +3,10 @@ Explain what the following status codes mean. Don't just copy and paste the defa
 
 # Answer
 
-1. 200 -
+1. 200 - When the opening of url is successful (website opens)
 
-2. 404 -
+2. 404 - Server or url address cannot be found (maybe a spelling mistake or link don't exist)
 
-3. 500 -
+3. 500 - There's something wrong with the server side, therefore the request is unsuccessful (need to get developer to fix it)
 
 # Teacher Feedback
