--- a/short-answers/q5.md
+++ b/short-answers/q5.md
@@ -3,6 +3,7 @@
 What is the danger behind inserting user entered information *directly* into the DOM unescaped?
 
 # Answer
-
+ 
+ The danger behind inserting user entered information *directly* into the DOM unescaped is it puts the security of both the application and its users at a vulnerable state.
 
 # Teacher Feedback
