--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -6,3 +6,5 @@ What is the "Request/Response Cycle?"
 The Request/Response Cycle is the flow of communication between a client and a server. The process works like this: Client Sends a Request -> Server Processes the Request -> Server Sends a Response -> Client Receives the Response -> Then Cycle.
 
 # Teacher Feedback
+3/3
+Great response!
