--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -10,3 +10,5 @@ Explain what the following status codes mean. Don't just copy and paste the defa
 3. 500 - There's something wrong with the server side, therefore the request is unsuccessful (need to get developer to fix it)
 
 # Teacher Feedback
+3/3
+Spot on!
