--- a/short-answers/q6.md
+++ b/short-answers/q6.md
@@ -6,3 +6,5 @@ What does `element.append()` do? What is an advantage it has over `element.appen
 Both used to add nodes to a parent element in the DOM tree, to show up on the html, it would have to append to document. `element.append()` can accept multiple arguments of different type and appends each of them as child nodes to the parent element at once. While `element.appendChild()` takes a single node as an argument and appends it as a child of the parent element. `element.append()` is more readable and concise compared to multiple `element.appendChild()` calls.
 
 # Teacher Feedback
+3/3
+Great detailed response!
