--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -7,3 +7,5 @@ What is the primary difference between an HTTP GET request and an HTTP Post requ
 
 
 # Teacher Feedback
+3/3
+Great answer! However, you could have gone more into detail for post requests. 
