--- a/short-answers/q5.md
+++ b/short-answers/q5.md
@@ -7,3 +7,5 @@ What is the danger behind inserting user entered information *directly* into the
  The danger behind inserting user entered information *directly* into the DOM unescaped is it puts the security of both the application and its users at a vulnerable state.
 
 # Teacher Feedback
+2/3
+You are definitely on the right track, what makes it a security risk? What could potentially go wrong? 
